Ignite fix and test cases changes after kryo removal.