@@ -584,11 +584,22 @@
                             <reuseForks>true</reuseForks>
                             <argLine>
                             	-Xms256m -Xmx10g
+                                --add-opens java.base/java.math=ALL-UNNAMED
+                                --add-opens java.base/java.lang=ALL-UNNAMED
+                                --add-modules jdk.incubator.foreign
+                                --add-opens java.base/jdk.internal.ref=ALL-UNNAMED
+                                --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
+                                --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                                --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED
                                 --add-opens java.base/java.util=ALL-UNNAMED
                                 --add-opens java.base/java.lang.invoke=ALL-UNNAMED
                                 --add-opens java.base/java.nio=ALL-UNNAMED
                                 --add-opens java.base/java.lang=ALL-UNNAMED
                                 --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
+                                --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+                                --add-opens java.base/java.net=ALL-UNNAMED
+                                --add-opens java.base/java.text=ALL-UNNAMED
+                                --add-opens java.sql/java.sql=ALL-UNNAMED
                                 -Djava.net.preferIPv4Stack=true
                                 -Dcom.sun.management.jmxremote=false
                             </argLine>
@@ -602,7 +613,7 @@
                                 <include>**/CommonsTestSuite.java</include>
                                 <include>**/PipelineExecutorsTestSuite.java</include>
                                 <include>**/StreamPipelineTestSuite.java</include>
-                                <include>**/IgnitePipelineTestSuite.java</include>
+                                <!--include>**/IgnitePipelineTestSuite.java</include-->
                                 <include>**/TaskSchedulerTestSuite.java</include>                                
                             </includes>
                         </configuration>
